   strings (-v) or the start and end positions of regions (-n).

 - Registry path list (in CORPUS_REGISTRY variable and -r options) may contain optional registry directories
   indicated by a leading '?' character.  If these are not mounted, CQP will not issue warning messages; if
   they are mounted, all tools should ignore the '?' in the pathname.

Bug fixes:

 - [2008-01-03] Fixed a strange bug in which the query
        ([pos = "IN|TO"] [pos = "DT.*"]? [pos = "JJ.*"]* [pos = "N.*"]+){3};
   causes CQP to segfault on Darwin/PowerPC platforms (discovered on Mac OS X 10.4 with PowerPC G4 CPU).
   The problem occurs for >= 3 repetitions, but not for 1 or 2 repetitions.  It turned out that 
   AddState()<cqp/regex2dfa.c> reallocates the state table STab[], which might move it to a different
   memory location, breaking a pointer into the array held by calling function FormState() in a local variable SP.
   This bug was difficult to find because it only causes problems if the original memory location of STab[]
   is overwritten immediately (perhaps by shifting STab[] to an overlapping location); otherwise, access through
   the stale copy pointed to by SP works fine.  To fix the bug, SP is now updated in FormState()<cqp/regex2dfa.c>
   immediately after calling AddState().

 - [2008-05-05] Added code to detect infinite loops in FSA simulation when executing a standard CQP query. Such
   loops can be caused by unlimited quantification over zero-width elements (XML tags and lookahead constraints),
   but will be triggered only in certain circumstances. While these queries are obviously nonsensical, novice
   users of Web interfaces often write things like ``<s> * ...'', thinking that ``*'' matches an arbitrary word.
   Some examples should illustrate the problem:
        <s> *         # not executed ("start state is final state")
        <s> +         # runs normally, but returns no matches (because all matches have length zero)